Bug 1926100 - Do not call UnquantizeAndAddBiasAndWrite in absence of bias r=yury

Otherwise random bytes are read, which can lead to various kind of
issues, including reading nan values.

Differential Revision: https://phabricator.services.mozilla.com/D230047