third_party/gemmology/kernels/GemmologyEngineAVXVNNI.cpp
@@ -16,4 +16,7 @@ template void Engine<xsimd::avxvnni>::Shift::Multiply(
 template void Engine<xsimd::avxvnni>::Shift::PrepareBias(
     int8_t const*, size_t, size_t,
     gemmology::callbacks::UnquantizeAndAddBiasAndWrite);
+template void Engine<xsimd::avxvnni>::Shift::PrepareBias(
+    int8_t const*, size_t, size_t,
+    gemmology::callbacks::UnquantizeAndWrite);
 }  // namespace gemmology
